# logfaker

./: IMPLEMENTATION_PLAN.md  LICENSE  README.ja.md  README.md  pyproject.toml
examples/: library_book.py  library_book_large.py  library_book_small.py
examples/library_book/: categories.csv  contents.csv  logs.csv  users.csv
logfaker/: __init__.py
logfaker/core/: __init__.py  config.py  exceptions.py  models.py
logfaker/generators/: __init__.py  content.py  queries.py  users.py
logfaker/search/: __init__.py  base.py  elasticsearch.py
logfaker/utils/: __init__.py  csv.py  importer.py
tests/: conftest.py  test_content_generation.py  test_file_reuse.py  test_query_generation.py  test_query_generation_integration.py  test_user_generation_integration.py
